# depthMapToPtCloud

./: .gitignore  CMakeLists.txt  DepthMapToPtCloud  DepthMapToPtCloud.cpp  Makefile  README  example.cpp  history.txt  ptcloud-output.txt
images/: Lenna.tif  depthImage131107_182133.none.tiff  depthImage131107_182133.tiff
